tests/fixtures/valid/constants.gcl
// constants.gcl -- const cross-reference test with units
const node g0: Acceleration = 9.80665 m/s^2;
const node two_g0: Acceleration = 2.0 * @g0;
const node half_pi: Dimensionless = PI / 2.0;
const node sqrt2: Dimensionless = sqrt(2.0);

param radius: Length = 100.0 m;
node circumference: Length = 2.0 * PI * @radius;
node area: Area = PI * @radius ^ 2.0;
