tests/fixtures/invalid/multi/module_import_mixed/src/lib/constants.gcl
// constants.gcl -- shared constants
pub const node g0: Acceleration = 9.80665 m/s^2;
const node pi: Dimensionless = 3.14159265;
